# uptime-kuma-mvr

./: pyproject.toml
tui/: add_mvr_tag_screen.css  app.css  app.py  create_mvr.py  divider.py  edit_tags_screen.css  fixture.py  merge_mvr.py  screens.py
