[project]
name = "MVRtoKuma"
version = "0.5.0"
description = "A tool to quickly create monitors in [Uptime Kuma](https://uptime.kuma.pet/), from fixtures defined in a [MVR](https://gdtf-share.com/) (My Virtual Rig) scene file"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ifaddr>=0.2.0",
    "pymvr>=1.0.5",
    "textual>=6.2.1",
    "textual-fspicker>=0.6.0",
    "uptime-kuma-api>=1.2.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
    "textual-dev>=1.7.0",
]
